Spring security modified

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -22,7 +22,7 @@ management.endpoints.enabled-by-default=true
 management.endpoint.info.enabled=true
 management.endpoint.shutdown.enabled=true
 
-spring.security2.user.name=user
-spring.security2.user.password=password
-spring.security2.user.roles=ADMIN
+spring.security.user.name=user
+spring.security.user.password=password
+spring.security.user.roles=ADMIN
 
